--- a/slider/index.html
+++ b/slider/index.html
@@ -150,7 +150,7 @@
                     translate += 600;
                     boxs.style.transform = `translateX(${translate}px)`;
                 }
-                arrow_right.style.transform = 'scale(1)';
+                arrow_left.style.transform = 'scale(1)';
             })
             arrow_right.addEventListener('mouseup', function(){
                 if(translate>=-600){
