--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -9,8 +9,19 @@
             margin: 0;
             padding: 0;
         }
+        .paper{
+            width: 400px;
+            padding: 20px;
+            border: 2px solid black;
+            border-radius: 30px;
+            margin: 50px auto;
+            text-align: center;
+        }
+        .Add{
+            margin-top: 10px;
+        }
         input{
-            width: 110px;
+            width: 157.5px;
             box-sizing: border-box;
         }
     </style>
@@ -19,8 +30,8 @@
     <div class="paper">
         <h1>To-Do-List</h1>
         <div class="Add">
-            <h3>Add List</h3>
-            <input type="text" maxlength="9">
+            <h2>Add List</h3>
+            <input type="text" maxlength="10">
         </div>
     </div>
     <script></script>
