--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -34,6 +34,8 @@
             <input type="text" maxlength="10">
         </div>
     </div>
-    <script></script>
+    <script>
+        rand_1_45
+    </script>
 </body>
 </html>
